Add bg package